Closed Bug 1140637 Opened 9 years ago Closed 9 years ago

jsep_session_unittest is not running on CI

Categories

(Core :: WebRTC: Signaling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(1 file, 1 obsolete file)

It was always the intent to have this test running on CI. Something is preventing it.
Assignee: nobody → docfaraday
Attached file MozReview Request: bz://1140637/bwc (obsolete) —
/r/5043 - Bug 1140637: Add jsep_session_unittest to testing/cppunittest.ini, and unbust it.

Pull down this commit:

hg pull review -r 91980628dd06114ab24be29c9b77629fef387619
Attachment #8574899 - Flags: review?(rjesup)
Attachment #8574899 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/mozilla-central/rev/02c9b11ccb67
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Attachment #8574899 - Attachment is obsolete: true
Attachment #8619697 - Flags: review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: