Bug 1140637: Add jsep_session_unittest to testing/cppunittest.ini, and unbust it. r=jesup